--- a/views/header.ejs
+++ b/views/header.ejs
@@ -24,3 +24,10 @@
 
 
 <article>
+
+<% if (success) { %>
+  <div><%= success %></div>
+<% } %>
+<% if (error) { %>
+  <div><%= error %> </div>
+<% } %>
